Getting rid of a lot of commons-io usage in flow-server
Now basic usage seems to work again after refactoring.