@@ -27,8 +27,6 @@ import java.util.zip.ZipFile;
 import java.util.zip.ZipInputStream;
 import java.util.zip.ZipOutputStream;
 
-import org.apache.commons.io.IOUtils;
-
 /**
  * Utility class for compression and decompression of folders and files.
  *
@@ -176,7 +174,8 @@ public class CompressUtil {
                 return null;
             }
             try (InputStream inputStream = zipFile.getInputStream(entry)) {
-                return IOUtils.toString(inputStream, StandardCharsets.UTF_8);
+                return new String(inputStream.readAllBytes(),
+                        StandardCharsets.UTF_8);
             }
         } catch (ZipException e) {
             throw new IOException(e);
