@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -105,7 +104,9 @@ public class ProdBundleUtils {
             return null;
         }
 
-        return IOUtils.toString(statsJson, StandardCharsets.UTF_8);
+        try (var in = statsJson.openStream()) {
+            return new String(in.readAllBytes(), StandardCharsets.UTF_8);
+        }
     }
 
     private static Logger getLogger() {
